<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/height_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/height_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height_prompt"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/user_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/confirm_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_prompt" />

</LinearLayout>