...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="20dp"
    android:gravity="center"/>

    <Button
        android:id="@+id/team_member_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/go_to_mock_button" />
...
